--- a/index.html
+++ b/index.html
@@ -87,34 +87,34 @@
             <div>
                 <h3>Features</h3>
                 <ul>
-                    <li><a href="">Link Shortening</a></li>
-                    <li><a href="">Branded Links</a></li>
-                    <li><a href="">Analytics</a></li>
+                    <li><a href="#">Link Shortening</a></li>
+                    <li><a href="#">Branded Links</a></li>
+                    <li><a href="#">Analytics</a></li>
                 </ul>
             </div>
             <div>
                 <h3>Resources</h3>
                 <ul>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Developers</a></li>
-                    <li><a href="">Support</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Developers</a></li>
+                    <li><a href="#">Support</a></li>
                 </ul>
             </div>
             <div>
                 <h3>Company</h3>
                 <ul>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Our Team</a></li>
-                    <li><a href="">Careers</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Our Team</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </section>
         <section class="three">
-            <img src="./images/icon-facebook.svg" alt="icon-facebook" class="mediaIcon">
-            <img src="./images/icon-twitter.svg" alt="icon-twitter" class="mediaIcon">
-            <img src="./images/icon-pinterest.svg" alt="icon-pinterest" class="mediaIcon">
-            <img src="./images/icon-instagram.svg" alt="icon-instagram" class="mediaIcon">
+            <a href="#"><img src="./images/icon-facebook.svg" alt="icon-facebook" class="mediaIcon"></a>
+            <a href="#"><img src="./images/icon-twitter.svg" alt="icon-twitter" class="mediaIcon"></a>
+            <a href="#"><img src="./images/icon-pinterest.svg" alt="icon-pinterest" class="mediaIcon"></a>
+            <a href="#"><img src="./images/icon-instagram.svg" alt="icon-instagram" class="mediaIcon"></a>
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
